# Curso-Ink

./: README.md
Call_build/: Readme.md
Call_build/flipper/: lib.rs
Call_build/psp22Token1/: Cargo.toml  lib.rs
Call_build/tokenSend/: Cargo.toml  error.rs  lib.rs  readme.md
Cross_Contract/contracts/organization/: Cargo.toml  lib.rs
Cross_Contract/contracts/psp34_lop/: Cargo.toml  lib.rs  psp34_lop_organization.rs
Cross_Contract/contracts/votantes/: Cargo.toml  lib.rs  package.json  voting_organizacion.rs
Flipper/: Cargo.toml  lib.rs
contracts/organization/: lib.rs
contracts/votantes/: lib.rs  package-lock.json  voting_organizacion.rs
organization/: Cargo.toml  compilar.sh  errors.rs  initNodo.sh  lib.rs
organization/master/: Cargo.toml  errors.rs  lib.rs
organization/psp34_bis/: Cargo.toml  lib.rs
organization/psp34_lop/: lib.rs
organization/votantes/: Cargo.toml  lib.rs
voting/: Cargo.toml  lib.rs
voting_mapping/: lib.rs
voting_mapping/src/: lib.rs
voting_mapping/tests/: tests.rs
voting_mappingII/: README.MD  lib.rs
