[package]
name = "organization"
version = "0.1.0"
authors = ["NeoPower Digital <contact@neopower.digital>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.6", default-features = false, features = [
    "derive",
], optional = true }

#voting = { path = "../voting", default-features = false, features = [
#    "ink-as-dependency",
#] }
Voting = { path = "../votantes", default-features = false, features = ["ink-as-dependency",] }
psp34_lop= { path = "../psp34_lop", default-features = false,  features = ["ink-as-dependency",] }

[dev-dependencies]
ink_e2e = "4.2.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "Voting/std"]
ink-as-dependency = []
e2e-tests = []
