[package]
name = "psp34_lop"
version = "1.0.0"
edition = "2021"
authors = ["The best developer ever"]

[dependencies]

ink = { version = "4.2.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }


#openbrush_contracts = { version ="2.2.0", features = ["psp34", "ownable"] }
openbrush = { tag = "4.0.0-beta", git = "https://github.com/Brushfam/openbrush-contracts?tag=4.0.0-beta", default-features = false, features = ["psp34", "ownable"] }
#openbrush = { path = "../..", default-features = false, features = ["psp34", "ownable"] }
#Buenas! Hay un bug en el generador de templates de OpenBrush parece. La URL es: https://github.com/Brushfam/openbrush-contracts?tag=4.0.0-beta

#quedó un typo en el tag name: hay que remover la "v" delante del 4.
[lib]
#name = "psp34_lop"
path = "lib.rs"


[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "openbrush/std"]
ink-as-dependency = [] 
